--- a/code/android/MyApplication/app/build.gradle
+++ b/code/android/MyApplication/app/build.gradle
@@ -8,6 +8,12 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
+
+        compileOptions {
+            sourceCompatibility JavaVersion.VERSION_1_8
+            targetCompatibility JavaVersion.VERSION_1_8
+
+        }
     }
 
     buildTypes {
@@ -23,4 +29,16 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation("com.github.bumptech.glide:glide:4.11.0") {
+        exclude group: "com.android.support"
+    }
+    implementation 'androidx.fragment:fragment:1.2.0'
+    implementation "com.github.bumptech.glide:okhttp3-integration:4.11.0"
+    implementation("com.squareup.okhttp3:okhttp:4.4.0")
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation 'com.github.bumptech.glide:annotations:4.11.0'
+    implementation 'com.youth.banner:banner:2.0.1'
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
+    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.2'  //1.0.5及以前版本的老用户升级需谨慎，API改动过大
 }
