--- a/code/android/MyApplication/build.gradle
+++ b/code/android/MyApplication/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
         maven { url 'https://maven.aliyun.com/repository/public' }
         maven { url 'https://maven.aliyun.com/repository/jcenter' }
+        google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.1'
@@ -18,6 +19,7 @@ allprojects {
         maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
         maven { url 'https://maven.aliyun.com/repository/public' }
         maven { url 'https://maven.aliyun.com/repository/jcenter' }
+        google()
     }
 }
 
